@@ -1,23 +1,15 @@
 package proveedores.controller;
 
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import proveedores.dto.MovimientoDTO;
-import proveedores.dto.MovimientoRequest;
-import proveedores.dto.NombreRequest;
 import proveedores.dto.ProveedorDTO;
 import proveedores.entity.Gremio;
-import proveedores.entity.Movimiento;
 import proveedores.entity.Proveedor;
 import proveedores.entity.TipoProveedor;
-import proveedores.exception.ClaveInvalidaException;
 import proveedores.service.ProveedorService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/proveedores")
@@ -29,38 +21,56 @@ public class ProveedoresController {
     // ======== HELPERS ========
 
     private ProveedorDTO toDTO(Proveedor entity) {
+        ProveedorDTO dto = new ProveedorDTO();
+        dto.setId(entity.getId());
+        dto.setNombre(entity.getNombre());
+        dto.setContacto(entity.getContacto());
+        dto.setTelefono(entity.getTelefono());
+        dto.setEmail(entity.getEmail());
+        dto.setActivo(entity.getActivo());
+        dto.setCreado_en(entity.getCreadoEn());
+        dto.setUltima_actualizacion(entity.getUltimaActualizacion());
+        dto.setTipo_actualizacion(entity.getTipoActualizacion());
 
-        return new ProveedorDTO(
-                entity.getId(),
-                entity.getNombre(),
-                entity.getDniCuit(),
-                entity.getTipo(),
-                entity.getGremio(),
-                entity.getContacto(),
-                entity.getTelefono(),
-                entity.getEmail(),
-                entity.getDireccion(),
-                entity.getActivo(),
-                entity.getCreadoEn(),
-                entity.getUltimaActualizacion(),
-                entity.getTipoActualizacion()
-        );
+        if (entity.getTipoProveedor() != null) {
+            dto.setTipo_proveedor_id(entity.getTipoProveedor().getId());
+            dto.setTipo_proveedor_nombre(entity.getTipoProveedor().getNombre());
+            dto.setTipo_proveedor(entity.getTipoProveedor().getNombre());
+        }
+
+        if (entity.getGremio() != null) {
+            dto.setGremio_id(entity.getGremio().getId());
+            dto.setGremio_nombre(entity.getGremio().getNombre());
+        }
+
+        return dto;
     }
-
 
     private Proveedor toEntity(ProveedorDTO dto) {
         Proveedor entity = new Proveedor();
 
         entity.setId(dto.getId());
         entity.setNombre(dto.getNombre());
-        entity.setDniCuit(dto.getDniCuit());
         entity.setContacto(dto.getContacto());
         entity.setTelefono(dto.getTelefono());
         entity.setEmail(dto.getEmail());
-        entity.setDireccion(dto.getDireccion());
-        entity.setTipo(dto.getTipo());
-        entity.setGremio(dto.getGremio());
         entity.setActivo(dto.getActivo() != null ? dto.getActivo() : Boolean.TRUE);
+
+        if (dto.getTipo_proveedor_id() != null) {
+            TipoProveedor tipo = service.findTipoById(dto.getTipo_proveedor_id())
+                    .orElseThrow(() -> new RuntimeException("Tipo de proveedor no encontrado"));
+            entity.setTipoProveedor(tipo);
+        } else if (dto.getTipo_proveedor() != null) {
+            TipoProveedor tipo = service.findTipoByNombre(dto.getTipo_proveedor())
+                    .orElseThrow(() -> new RuntimeException("Tipo de proveedor no encontrado"));
+            entity.setTipoProveedor(tipo);
+        }
+
+        if (dto.getGremio_id() != null) {
+            Gremio gremio = service.findGremioById(dto.getGremio_id())
+                    .orElseThrow(() -> new RuntimeException("Gremio no encontrado"));
+            entity.setGremio(gremio);
+        }
 
         return entity;
     }
@@ -72,7 +82,7 @@ public class ProveedoresController {
         List<ProveedorDTO> result = service.findAllActivos()
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(result);
     }
 
@@ -91,8 +101,12 @@ public class ProveedoresController {
 
     @PostMapping
     public ResponseEntity<ProveedorDTO> create(@RequestBody ProveedorDTO dto) {
-        Proveedor saved = service.save(toEntity(dto));
-        return ResponseEntity.status(201).body(toDTO(saved));
+        try {
+            Proveedor saved = service.save(toEntity(dto));
+            return ResponseEntity.ok(toDTO(saved));
+        } catch (RuntimeException e) {
+            return ResponseEntity.badRequest().build();
+        }
     }
 
     @PutMapping("/{id}")
@@ -109,122 +123,5 @@ public class ProveedoresController {
     public ResponseEntity<Void> delete(@PathVariable("id") Long id) {
         service.delete(id);
         return ResponseEntity.noContent().build();
-    }
-
-    @PatchMapping("/{id}/desactivar")
-    public ResponseEntity<Void> desactivar(@PathVariable("id") Long id) {
-        service.desactivar(id);
-        return ResponseEntity.ok().build();
-    }
-
-    @PatchMapping("/{id}/activar")
-    public ResponseEntity<Void> activar(@PathVariable("id") Long id) {
-        service.activar(id);
-        return ResponseEntity.ok().build();
-    }
-
-    @PostMapping("/tipos")
-    public ResponseEntity<TipoProveedor> crearTipo(@RequestBody NombreRequest request) {
-        return ResponseEntity.status(201).body(service.agregarTipo(request.getNombre()));
-    }
-
-    @GetMapping("/tipos")
-    public ResponseEntity<List<TipoProveedor>> listarTipos() {
-        return ResponseEntity.ok(service.findAllTipoActivos());
-    }
-
-    @PutMapping("/tipos/{id}")
-    public ResponseEntity<TipoProveedor> actualizarTipo(@PathVariable Long id, @RequestBody NombreRequest request) {
-        try {
-            return ResponseEntity.ok(service.actualizarTipo(id, request.getNombre()));
-        } catch (EntityNotFoundException e) {
-            return ResponseEntity.notFound().build();
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().build();
-        }
-    }
-
-    @DeleteMapping("/tipos/{id}")
-    public ResponseEntity<Void> eliminarTipo(@PathVariable Long id) {
-        boolean eliminado = service.eliminarTipo(id);
-        return eliminado ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
-    }
-
-    @PostMapping("/gremios")
-    public ResponseEntity<Gremio> crearGremio(@RequestBody NombreRequest request) {
-        return ResponseEntity.status(201).body(service.agregarGremio(request.getNombre()));
-    }
-
-    @GetMapping("/gremios")
-    public ResponseEntity<List<Gremio>> listarGremios() {
-        return ResponseEntity.ok(service.findAllGremiosActivos());
-    }
-
-    @PutMapping("/gremios/{id}")
-    public ResponseEntity<Gremio> actualizarGremio(@PathVariable Long id, @RequestBody NombreRequest request) {
-        try {
-            return ResponseEntity.ok(service.actualizarGremio(id, request.getNombre()));
-        } catch (EntityNotFoundException e) {
-            return ResponseEntity.notFound().build();
-        } catch (IllegalArgumentException e) {
-            return ResponseEntity.badRequest().build();
-        }
-    }
-
-    @DeleteMapping("/gremios/{id}")
-    public ResponseEntity<Void> eliminarGremio(@PathVariable Long id) {
-        boolean eliminado = service.eliminarGremio(id);
-        return eliminado ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
-    }
-
-    @GetMapping("/{proveedorId}/movimientos")
-    public ResponseEntity<List<MovimientoDTO>> listarMovimientos(@PathVariable Long proveedorId) {
-        return ResponseEntity.ok(service.listarMovimientos(proveedorId));
-    }
-
-    @PostMapping("/{proveedorId}/movimientos")
-    public ResponseEntity<MovimientoDTO> crearMovimiento(@PathVariable Long proveedorId, @RequestBody MovimientoRequest request) {
-        Movimiento movimiento = toMovimiento(request);
-        Movimiento guardado = service.crearMovimiento(proveedorId, movimiento);
-        return ResponseEntity.status(201).body(service.listarMovimientos(proveedorId).stream()
-                .filter(m -> m.getId().equals(guardado.getId()))
-                .findFirst()
-                .orElseThrow());
-    }
-
-    @PutMapping("/movimientos/{movimientoId}")
-    public ResponseEntity<MovimientoDTO> actualizarMovimiento(@PathVariable Long movimientoId, @RequestBody MovimientoRequest request) {
-        Movimiento movimiento = toMovimiento(request);
-        Movimiento actualizado = service.actualizarMovimiento(movimientoId, movimiento);
-        return ResponseEntity.ok(service.listarMovimientos(actualizado.getProveedor().getId()).stream()
-                .filter(m -> m.getId().equals(actualizado.getId()))
-                .findFirst()
-                .orElseThrow());
-    }
-
-    @DeleteMapping("/movimientos/{movimientoId}")
-    public ResponseEntity<Void> eliminarMovimiento(@PathVariable Long movimientoId, @RequestParam("clave") String clave) {
-        service.eliminarMovimiento(movimientoId, clave);
-        return ResponseEntity.ok().build();
-    }
-
-    @ExceptionHandler(ClaveInvalidaException.class)
-    public ResponseEntity<Void> handleForbidden() {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
-    }
-
-    @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<String> handleBadRequest(IllegalArgumentException ex) {
-        return ResponseEntity.badRequest().body(ex.getMessage());
-    }
-
-    private Movimiento toMovimiento(MovimientoRequest request) {
-        Movimiento movimiento = new Movimiento();
-        movimiento.setObraId(request.getObraId());
-        movimiento.setDescripcion(request.getDescripcion());
-        movimiento.setMonto(request.getMonto());
-        movimiento.setMontoPagado(request.getMontoPagado());
-        movimiento.setPagado(request.getPagado());
-        return movimiento;
     }
 }
